<resources>
    <string name="app_name">Polynomial Equation Generator</string>
    <string name="settings">Settings</string>
    <string name="dec_place_title">Decimal Place</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="zero">0</string>
    <string name="x">X =</string>
    <string name="y">Y =</string>
    <string name="input_x">Input (x)</string>
    <string name="output_y">Output (y)</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="y_polynomial_equation_of_x">Y = Polynomial Equation of x</string>
    <string name="enter_your_inputs_x_amp_outputs_y"><![CDATA[Enter Your Inputs (x) & Outputs (y)]]></string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="calculate">Calculate</string>
    <string name="add2">Add2</string>
</resources>