<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarSize="10sp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            style="@style/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="3dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/tv_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/y_polynomial_equation_of_x"
                android:textAlignment="center"
                android:textColor="#191818"
                android:textSize="22sp"
                android:paddingVertical="5dp"
                android:layout_marginHorizontal="5dp"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/data_items_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/layout_center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/bt_center_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:src="@drawable/ic_add_48"
                app:tint="@color/teal_700"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/add2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_inputs_x_amp_outputs_y"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="5sp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bt_settings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:backgroundTint="@color/teal_700"
            android:src="@drawable/ic_settings_32"
            app:tint="@color/white"
            android:contentDescription="@string/settings" />

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/clear" />

        <Button
            android:id="@+id/bt_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/add"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/bt_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/calculate" />
    </LinearLayout>
</LinearLayout>